# GradLint

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: bids.rs  main.rs  style.rs
crates/core/: Cargo.toml
crates/core/src/: angular.rs  bids_batch.rs  candidate.rs  coherence.rs  consistency.rs  error.rs  flip.rs  frame.rs  gradient.rs  lib.rs  pipeline.rs  repair.rs  report.rs  scheme_qc.rs  shell.rs  tensor.rs  volume.rs
crates/core/src/io/: bids.rs  fsl.rs  mod.rs  mrtrix.rs  provenance.rs
crates/py/: Cargo.toml  pyproject.toml
crates/py/python/gradlint/: __init__.py  api.py  cli.py
crates/py/python/gradlint/report/: __init__.py  figures.py  glyphs.py  html.py  markdown.py  model.py
crates/py/src/: lib.rs
examples/: quickstart.ipynb
tests/: test_phase7.py  test_report.py  test_smoke.py
