[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/py"]

[workspace.package]
version = "1.1.2"
edition = "2021"
rust-version = "1.74"
license = "MIT"
authors = ["Marco Tagliaferri <marco.tagliaferri93@gmail.com>"]
repository = "https://github.com/marcotag93/GradLint"
homepage = "https://github.com/marcotag93/GradLint"
documentation = "https://github.com/marcotag93/GradLint#readme"

[workspace.dependencies]
gradlint-core = { path = "crates/core" }
ndarray = "0.15"
nalgebra = "0.33"
nifti = "0.16"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
pyo3 = { version = "0.23", features = ["extension-module"] }

[profile.release]
lto = "thin"
codegen-units = 1
