[package]
name = "gradlint-cli"
description = "Command-line interface for gradlint."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "gradlint"
path = "src/main.rs"

[dependencies]
gradlint-core.workspace = true
clap.workspace = true
ndarray.workspace = true
serde_json.workspace = true

[features]
libdeflate = ["gradlint-core/libdeflate"]

[dev-dependencies]
tempfile = "3"
