[package]
name = "gradlint-py"
description = "Python bindings for gradlint."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "_gradlint"
crate-type = ["cdylib"]

[dependencies]
gradlint-core.workspace = true
pyo3.workspace = true
ndarray.workspace = true
serde_json.workspace = true

[features]
libdeflate = ["gradlint-core/libdeflate"]
