[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "gradlint"
description = "Fast gradient-scheme QC, b-vector flip detection, and repair for diffusion MRI."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marco Tagliaferri", email = "marco.tagliaferri93@gmail.com" }]
keywords = ["diffusion MRI", "tractography", "quality control", "bvec", "DTI"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = ["numpy>=1.26", "jinja2>=3.1", "matplotlib>=3.8"]

[project.scripts]
gradlint = "gradlint.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "black", "isort"]

[project.urls]
Homepage = "https://github.com/marcotag93/GradLint"
Repository = "https://github.com/marcotag93/GradLint"
Documentation = "https://github.com/marcotag93/GradLint#readme"
Changelog = "https://github.com/marcotag93/GradLint/blob/main/CHANGELOG.md"

[tool.maturin]
module-name = "gradlint._gradlint"
python-source = "python"
features = ["pyo3/extension-module"]
